# minecraft_launcher_v3_rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/app/: app_state.rs  mod.rs
src/app/infrastructure/: mod.rs
src/app/infrastructure/filesystem/: get_version_sha1.rs  mod.rs  resolve_assets.rs  resolve_client_jar.rs  resolve_libraries.rs  save_assets_index.rs  save_json_file.rs  save_version_manifest.rs
src/app/models/: assets.rs  mod.rs  unified_version.rs  version.rs  versions.rs  versions_below_26x.rs
src/app/services/: download_client_jar.rs  handle_launch.rs  minecraft.rs  mod.rs  versions.rs
src/app/services/assets/: check_exist_assets.rs  check_exist_assets_index.rs  download_asset.rs  download_assets_index.rs  mod.rs
src/app/services/java/: build_classpath.rs  build_game_arguments.rs  build_jvm_arguments.rs  check_jvm_rules.rs  launch_game.rs  mod.rs  placeholder_replacement.rs
src/app/services/libraries/: check_exist_library.rs  download_library.rs  extract_native_library.rs  get_necessary_libraries.rs  mod.rs
src/app/ui/screens/: home.rs  launch.rs  launch_settings.rs  mod.rs
src/app/ui/widgets/: input.rs  mod.rs  number_input.rs  sidebar.rs  styled_checkbox.rs
src/app/utils/: mod.rs
src/app/utils/consts/: mod.rs  screens.rs
src/app/utils/fonts/: mod.rs  setup_custom_fonts.rs
src/app/utils/helpers/: get_java_version.rs  is_native_library.rs  logs.rs  mod.rs  resolve_assets_path.rs
src/app/workers/: launch_commands_manager.rs  launch_events_manager.rs  mod.rs  versions_events_manager.rs
