[package]
name = "minecraft_launcher_v3"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.3"
egui = "0.34.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
sha1 = "0.11.0"
hex = "0.4"
futures = "0.3"
zip = "8.6.0"
uuid = { version = "1.23.3", features = ["v4"] }